correct the anchor of contact

--- a/isseipage/templates/index.html
+++ b/isseipage/templates/index.html
@@ -122,7 +122,7 @@
     <div class="container">
         <div class="row text-center mb-3">
             <div class="col">
-                <h2 class="font-weight-bold" id="skills_anchor">CONTACT</h2>
+                <h2 class="font-weight-bold" id="contact_anchor">CONTACT</h2>
                 <p class="lead">Feel free to get in touch!</p>
             </div>
         </div>
