--- a/isseipage/templates/base.html
+++ b/isseipage/templates/base.html
@@ -1,63 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="description" content="Issei's Page">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="format-detection" content="telephone=no">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="Issei's Page" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="format-detection" content="telephone=no" />
 
     <title>Issei's Page</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
-</head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-4P9G1MEMNY"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-<body>
+      gtag("config", "G-4P9G1MEMNY");
+    </script>
+
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="{{url_for('static', filename='css/style.css')}}"
+    />
+  </head>
+
+  <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
-            <div class="container">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                    <ul class="navbar-nav mx-auto">
-                        <li class="nav-item">
-                            <a class="navbar-brand text-dark font-weight-bold custom-text" href="{{url_for('main.index')}}">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark custom-text" href="{{url_for('main.index', _anchor='profile_anchor')}}">Profile</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark custom-text" href="{{url_for('main.index', _anchor='skills_anchor')}}">Skills</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark custom-text" href="{{url_for('main.index', _anchor='projects_anchor')}}">Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark custom-text" href="{{url_for('main.index', _anchor='contact_anchor')}}">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    {% block head %}
-
-    {% endblock %}
+      <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
+        <div class="container">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-center"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item">
+                <a
+                  class="navbar-brand text-dark font-weight-bold custom-text"
+                  href="{{url_for('main.index')}}"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-dark custom-text"
+                  href="{{url_for('main.index', _anchor='profile_anchor')}}"
+                  >Profile</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-dark custom-text"
+                  href="{{url_for('main.index', _anchor='skills_anchor')}}"
+                  >Skills</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-dark custom-text"
+                  href="{{url_for('main.index', _anchor='projects_anchor')}}"
+                  >Projects</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-dark custom-text"
+                  href="{{url_for('main.index', _anchor='contact_anchor')}}"
+                  >Contact</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-dark custom-text"
+                  href="{{url_for('main.issei_gpt')}}"
+                  >IsseiGPT</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      {% block head %} {% endblock %}
     </header>
     <div class="container-fluid">
-        <main>
-            {% block main %}
-            {% endblock %}
-        </main>
+      <main>{% block main %} {% endblock %}</main>
     </div>
 
     <footer class="footer">
-        <div class="container text-center">
-            <p>Copyright &copy; Issei's Page</p>
-        </div>
+      <div class="container text-center">
+        <p>Copyright &copy; Issei's Page</p>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 </html>
