--- a/isseipage/templates/issei_gpt.html
+++ b/isseipage/templates/issei_gpt.html
@@ -22,7 +22,7 @@
               type="text"
               id="question"
               name="question"
-              placeholder="What do you want to know about Issei?"
+              placeholder="Who is Issei?"
               required
               class="form-control flex-grow-1 me-md-2 mb-2 mb-md-0"
             />
