change the name of placeholder

--- a/isseipage/templates/issei_gpt.html
+++ b/isseipage/templates/issei_gpt.html
@@ -22,7 +22,7 @@
               type="text"
               id="question"
               name="question"
-              placeholder="Who is Issei?"
+              placeholder="Ask about Issei!"
               required
               class="form-control flex-grow-1 me-md-2 mb-2 mb-md-0"
             />
